// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hMR - Vite Platform > should work with vite 1`] = `
"import { child, createApp, createComponent, effect, insert, next, signal, template } from "essor";
//#region \\0virtual:essor-hmr
/**
* Essor HMR Runtime - Signal-based Hot Module Replacement
*
* This runtime enables precise component-level HMR updates without full page reloads:
*
* 1. **Signal Wrapping**: Each component is wrapped in a reactive signal
* 2. **Signature Tracking**: Components are tracked by code signatures (from babel plugin)
* 3. **Precise Updates**: Only components with changed signatures are updated
* 4. **Effect Subscription**: Component instances subscribe to signal changes via effects
* 5. **Bundler Agnostic**: Works with Vite, Webpack, Rspack, and other bundlers
*/
/**
* Global component registry for HMR tracking
*
* Maps hmrId -> ComponentInfo where:
* - hmrId: Unique identifier for component (fileHash:componentName)
* - componentSignal: Reactive signal holding the current component function
* - signature: Hash of component code (changes when code changes)
* - instances: Set of active component instances
* - cleanups: Map of cleanup functions for each instance's effect
*/
var componentRegistry = /* @__PURE__ */ new Map();
/**
* Create HMR-enabled component wrapper
*
* This function wraps a component to enable HMR:
* 1. Creates or retrieves component registry entry
* 2. Wraps component function to always read from latest signal value
* 3. Sets up reactive effect to auto-update component when signal changes
* 4. Returns regular component instance that auto-updates on HMR
*
* @param componentFn - Component function with __hmrId and __signature
* @param props - Component props
* @returns Component instance that responds to HMR updates
*/
function createHMRComponent(componentFn, props) {
	const { __hmrId: hmrId, __signature: signature } = componentFn;
	if (!hmrId) return createComponent(componentFn, props);
	let info = componentRegistry.get(hmrId);
	if (!info) {
		info = {
			componentSignal: signal(componentFn),
			signature,
			instances: /* @__PURE__ */ new Set(),
			cleanups: /* @__PURE__ */ new Map()
		};
		componentRegistry.set(hmrId, info);
	}
	const component = createComponent(componentFn, props);
	info.instances.add(component);
	let initialized = false;
	const cleanup = effect(() => {
		const currentComponentFn = info.componentSignal.value;
		if (!initialized) {
			initialized = true;
			return;
		}
		try {
			component.component = currentComponentFn;
			component.forceUpdate();
		} catch (error) {
			console.error(\`[Essor HMR] Failed to update component instance:\`, error);
		}
	});
	info.cleanups.set(component, cleanup);
	const originalOnBeforeUnmount = component.onBeforeUnmount;
	component.onBeforeUnmount = function() {
		if (originalOnBeforeUnmount) originalOnBeforeUnmount.call(this);
		const cleanupFn = info.cleanups.get(component);
		if (cleanupFn) {
			cleanupFn();
			info.cleanups.delete(component);
		}
		info.instances.delete(component);
	};
	return component;
}
//#endregion
//#region packages/unplugin/test/fixtures/basic.tsx
var _t$3 = template("<div><!><!></div>");
var _t$2 = template("<div>Bar</div>");
var _t$ = template("<div>Foo</div>");
function Foo() {
	return _t$();
}
Foo.__signature = "1lygndc";
Foo.__hmrId = "me1pwu:Foo";
function Bar() {
	return _t$2();
}
Bar.__signature = "u5b22v";
Bar.__hmrId = "me1pwu:Bar";
function App() {
	return (() => {
		const _root$ = _t$3();
		const _n$ = child(_root$);
		const _n$2 = next(_n$, 1);
		insert(_root$, createHMRComponent(Foo, {}), _n$);
		insert(_root$, createHMRComponent(Bar, {}), _n$2);
		return _root$;
	})();
}
App.__signature = "uvdrlt";
App.__hmrId = "me1pwu:App";
createApp(createHMRComponent(App), "#root");
//#endregion
"
`;

exports[`hMR - Vite Platform > should work with vite 2`] = `
"import { child, createApp, createComponent, effect, insert, next, signal, template } from "essor";
//#region \\0virtual:essor-hmr
/**
* Essor HMR Runtime - Signal-based Hot Module Replacement
*
* This runtime enables precise component-level HMR updates without full page reloads:
*
* 1. **Signal Wrapping**: Each component is wrapped in a reactive signal
* 2. **Signature Tracking**: Components are tracked by code signatures (from babel plugin)
* 3. **Precise Updates**: Only components with changed signatures are updated
* 4. **Effect Subscription**: Component instances subscribe to signal changes via effects
* 5. **Bundler Agnostic**: Works with Vite, Webpack, Rspack, and other bundlers
*/
/**
* Global component registry for HMR tracking
*
* Maps hmrId -> ComponentInfo where:
* - hmrId: Unique identifier for component (fileHash:componentName)
* - componentSignal: Reactive signal holding the current component function
* - signature: Hash of component code (changes when code changes)
* - instances: Set of active component instances
* - cleanups: Map of cleanup functions for each instance's effect
*/
var componentRegistry = /* @__PURE__ */ new Map();
/**
* Create HMR-enabled component wrapper
*
* This function wraps a component to enable HMR:
* 1. Creates or retrieves component registry entry
* 2. Wraps component function to always read from latest signal value
* 3. Sets up reactive effect to auto-update component when signal changes
* 4. Returns regular component instance that auto-updates on HMR
*
* @param componentFn - Component function with __hmrId and __signature
* @param props - Component props
* @returns Component instance that responds to HMR updates
*/
function createHMRComponent(componentFn, props) {
	const { __hmrId: hmrId, __signature: signature } = componentFn;
	if (!hmrId) return createComponent(componentFn, props);
	let info = componentRegistry.get(hmrId);
	if (!info) {
		info = {
			componentSignal: signal(componentFn),
			signature,
			instances: /* @__PURE__ */ new Set(),
			cleanups: /* @__PURE__ */ new Map()
		};
		componentRegistry.set(hmrId, info);
	}
	const component = createComponent(componentFn, props);
	info.instances.add(component);
	let initialized = false;
	const cleanup = effect(() => {
		const currentComponentFn = info.componentSignal.value;
		if (!initialized) {
			initialized = true;
			return;
		}
		try {
			component.component = currentComponentFn;
			component.forceUpdate();
		} catch (error) {
			console.error(\`[Essor HMR] Failed to update component instance:\`, error);
		}
	});
	info.cleanups.set(component, cleanup);
	const originalOnBeforeUnmount = component.onBeforeUnmount;
	component.onBeforeUnmount = function() {
		if (originalOnBeforeUnmount) originalOnBeforeUnmount.call(this);
		const cleanupFn = info.cleanups.get(component);
		if (cleanupFn) {
			cleanupFn();
			info.cleanups.delete(component);
		}
		info.instances.delete(component);
	};
	return component;
}
//#endregion
//#region packages/unplugin/test/fixtures/exports.tsx
var _t$3 = template("<div><!><!></div>");
var _t$2 = template("<div>B</div>");
var _t$ = template("<div>A</div>");
function ComponentA() {
	return _t$();
}
ComponentA.__signature = "yeg9zu";
ComponentA.__hmrId = "ydmpkz:ComponentA";
var ComponentB = () => _t$2();
ComponentB.__signature = "1vo7hf2";
ComponentB.__hmrId = "ydmpkz:ComponentB";
function App() {
	return (() => {
		const _root$ = _t$3();
		const _n$ = child(_root$);
		const _n$2 = next(_n$, 1);
		insert(_root$, createHMRComponent(ComponentA, {}), _n$);
		insert(_root$, createHMRComponent(ComponentB, {}), _n$2);
		return _root$;
	})();
}
App.__signature = "1q4priw";
App.__hmrId = "ydmpkz:App";
createApp(createHMRComponent(App), "#root");
//#endregion
export { ComponentA, ComponentB, App as default };
"
`;

exports[`hMR - Vite Platform > should work with vite 3`] = `
"import { child, createApp, createComponent, effect, insert, next, signal, template } from "essor";
//#region \\0virtual:essor-hmr
/**
* Essor HMR Runtime - Signal-based Hot Module Replacement
*
* This runtime enables precise component-level HMR updates without full page reloads:
*
* 1. **Signal Wrapping**: Each component is wrapped in a reactive signal
* 2. **Signature Tracking**: Components are tracked by code signatures (from babel plugin)
* 3. **Precise Updates**: Only components with changed signatures are updated
* 4. **Effect Subscription**: Component instances subscribe to signal changes via effects
* 5. **Bundler Agnostic**: Works with Vite, Webpack, Rspack, and other bundlers
*/
/**
* Global component registry for HMR tracking
*
* Maps hmrId -> ComponentInfo where:
* - hmrId: Unique identifier for component (fileHash:componentName)
* - componentSignal: Reactive signal holding the current component function
* - signature: Hash of component code (changes when code changes)
* - instances: Set of active component instances
* - cleanups: Map of cleanup functions for each instance's effect
*/
var componentRegistry = /* @__PURE__ */ new Map();
/**
* Create HMR-enabled component wrapper
*
* This function wraps a component to enable HMR:
* 1. Creates or retrieves component registry entry
* 2. Wraps component function to always read from latest signal value
* 3. Sets up reactive effect to auto-update component when signal changes
* 4. Returns regular component instance that auto-updates on HMR
*
* @param componentFn - Component function with __hmrId and __signature
* @param props - Component props
* @returns Component instance that responds to HMR updates
*/
function createHMRComponent(componentFn, props) {
	const { __hmrId: hmrId, __signature: signature } = componentFn;
	if (!hmrId) return createComponent(componentFn, props);
	let info = componentRegistry.get(hmrId);
	if (!info) {
		info = {
			componentSignal: signal(componentFn),
			signature,
			instances: /* @__PURE__ */ new Set(),
			cleanups: /* @__PURE__ */ new Map()
		};
		componentRegistry.set(hmrId, info);
	}
	const component = createComponent(componentFn, props);
	info.instances.add(component);
	let initialized = false;
	const cleanup = effect(() => {
		const currentComponentFn = info.componentSignal.value;
		if (!initialized) {
			initialized = true;
			return;
		}
		try {
			component.component = currentComponentFn;
			component.forceUpdate();
		} catch (error) {
			console.error(\`[Essor HMR] Failed to update component instance:\`, error);
		}
	});
	info.cleanups.set(component, cleanup);
	const originalOnBeforeUnmount = component.onBeforeUnmount;
	component.onBeforeUnmount = function() {
		if (originalOnBeforeUnmount) originalOnBeforeUnmount.call(this);
		const cleanupFn = info.cleanups.get(component);
		if (cleanupFn) {
			cleanupFn();
			info.cleanups.delete(component);
		}
		info.instances.delete(component);
	};
	return component;
}
//#endregion
//#region packages/unplugin/test/fixtures/props.tsx
var _t$ = template("<div>Hello <!></div>");
function PropsComponent(props) {
	return (() => {
		const _root$ = _t$();
		insert(_root$, () => props.name, next(child(_root$), 1));
		return _root$;
	})();
}
PropsComponent.__signature = "kth069";
PropsComponent.__hmrId = "1dblsze:PropsComponent";
createApp(createHMRComponent(() => createHMRComponent(PropsComponent, { name: "World" })), "#root");
//#endregion
"
`;

exports[`hMR - Vite Platform > should work with vite 4`] = `
"import { child, createApp, createComponent, delegateEvents, effect, insert, next, signal, template } from "essor";
//#region \\0virtual:essor-hmr
/**
* Essor HMR Runtime - Signal-based Hot Module Replacement
*
* This runtime enables precise component-level HMR updates without full page reloads:
*
* 1. **Signal Wrapping**: Each component is wrapped in a reactive signal
* 2. **Signature Tracking**: Components are tracked by code signatures (from babel plugin)
* 3. **Precise Updates**: Only components with changed signatures are updated
* 4. **Effect Subscription**: Component instances subscribe to signal changes via effects
* 5. **Bundler Agnostic**: Works with Vite, Webpack, Rspack, and other bundlers
*/
/**
* Global component registry for HMR tracking
*
* Maps hmrId -> ComponentInfo where:
* - hmrId: Unique identifier for component (fileHash:componentName)
* - componentSignal: Reactive signal holding the current component function
* - signature: Hash of component code (changes when code changes)
* - instances: Set of active component instances
* - cleanups: Map of cleanup functions for each instance's effect
*/
var componentRegistry = /* @__PURE__ */ new Map();
/**
* Create HMR-enabled component wrapper
*
* This function wraps a component to enable HMR:
* 1. Creates or retrieves component registry entry
* 2. Wraps component function to always read from latest signal value
* 3. Sets up reactive effect to auto-update component when signal changes
* 4. Returns regular component instance that auto-updates on HMR
*
* @param componentFn - Component function with __hmrId and __signature
* @param props - Component props
* @returns Component instance that responds to HMR updates
*/
function createHMRComponent(componentFn, props) {
	const { __hmrId: hmrId, __signature: signature } = componentFn;
	if (!hmrId) return createComponent(componentFn, props);
	let info = componentRegistry.get(hmrId);
	if (!info) {
		info = {
			componentSignal: signal(componentFn),
			signature,
			instances: /* @__PURE__ */ new Set(),
			cleanups: /* @__PURE__ */ new Map()
		};
		componentRegistry.set(hmrId, info);
	}
	const component = createComponent(componentFn, props);
	info.instances.add(component);
	let initialized = false;
	const cleanup = effect(() => {
		const currentComponentFn = info.componentSignal.value;
		if (!initialized) {
			initialized = true;
			return;
		}
		try {
			component.component = currentComponentFn;
			component.forceUpdate();
		} catch (error) {
			console.error(\`[Essor HMR] Failed to update component instance:\`, error);
		}
	});
	info.cleanups.set(component, cleanup);
	const originalOnBeforeUnmount = component.onBeforeUnmount;
	component.onBeforeUnmount = function() {
		if (originalOnBeforeUnmount) originalOnBeforeUnmount.call(this);
		const cleanupFn = info.cleanups.get(component);
		if (cleanupFn) {
			cleanupFn();
			info.cleanups.delete(component);
		}
		info.instances.delete(component);
	};
	return component;
}
//#endregion
//#region packages/unplugin/test/fixtures/signals.tsx
var _t$ = template("<div>Count: <!></div>");
function SignalComponent() {
	const count = signal(0);
	return (() => {
		const _root$ = _t$();
		const _n$2 = next(child(_root$), 1);
		_root$["_$click"] = () => count.value++;
		insert(_root$, () => count.value, _n$2);
		return _root$;
	})();
}
SignalComponent.__signature = "182rwo7";
SignalComponent.__hmrId = "1xegm1l:SignalComponent";
createApp(createHMRComponent(SignalComponent), "#root");
delegateEvents(["click"]);
//#endregion
"
`;
